revolutionary_refactoring: fix products tests. add api routes
